--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@docusaurus/preset-classic": "^3.6.3",
     "@docusaurus/theme-mermaid": "3.6.3",
     "@mdx-js/react": "3.1.0",
+    "@signalwire/docusaurus-plugin-llms-txt": "^1.2.2",
     "clsx": "^2.1.1",
     "docusaurus-lunr-search": "^3.6.0",
-    "docusaurus-plugin-llms": "^0.1.4",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -43,5 +43,6 @@
   },
   "engines": {
     "node": ">=18.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
