--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/preset-classic": "^3.6.3",
     "@docusaurus/theme-mermaid": "3.6.3",
     "@mdx-js/react": "3.1.0",
+    "@saucelabs/theme-github-codeblock": "^0.3.0",
     "@signalwire/docusaurus-plugin-llms-txt": "^1.2.2",
     "clsx": "^2.1.1",
     "docusaurus-lunr-search": "^3.6.0",
